Modulo de usuario completo

--- a/BackEndElectronicaDeny/appsettings.json
+++ b/BackEndElectronicaDeny/appsettings.json
@@ -1,8 +1,8 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "AllowedHosts": "*",
@@ -12,7 +12,7 @@
   "Jwt": {
     "SecretKey": "s3cR3tK3y!@#1234567890qwertyuiopASDFGHJKL",
     "Issuer": "ElectronicaDeny",
-    "Audience": "ElectronicaDenyClients"
+    "Audience": "FrontElectronicaDenyClients"
   },
   "EmailConfiguration": {
     "SmtpSettings": {
